build/log/idf_py_stdout_output_93187
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/robertfranczak/Code/ESP32/ESP/build/bootloader/esp-idf/esptool_py && /Users/robertfranczak/.espressif/python_env/idf5.1_py3.10_env/bin/python /Users/robertfranczak/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/robertfranczak/Code/ESP32/ESP/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/7] Building CXX object esp-idf/utils/CMakeFiles/__idf_utils.dir/Thread.cpp.obj
FAILED: esp-idf/utils/CMakeFiles/__idf_utils.dir/Thread.cpp.obj 
/Users/robertfranczak/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-992-gaf28c1fa21-dirty\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/robertfranczak/Code/ESP32/ESP/build/config -I/Users/robertfranczak/esp/esp-idf/components/newlib/platform_include -I/Users/robertfranczak/Code/ESP32/ESP/src/utils -I/Users/robertfranczak/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/robertfranczak/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/robertfranczak/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/robertfranczak/esp/esp-idf/components/freertos/esp_additions/include -I/Users/robertfranczak/esp/esp-idf/components/esp_hw_support/include -I/Users/robertfranczak/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/robertfranczak/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/robertfranczak/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/robertfranczak/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/robertfranczak/esp/esp-idf/components/heap/include -I/Users/robertfranczak/esp/esp-idf/components/log/include -I/Users/robertfranczak/esp/esp-idf/components/soc/include -I/Users/robertfranczak/esp/esp-idf/components/soc/esp32/. -I/Users/robertfranczak/esp/esp-idf/components/soc/esp32/include -I/Users/robertfranczak/esp/esp-idf/components/hal/esp32/include -I/Users/robertfranczak/esp/esp-idf/components/hal/include -I/Users/robertfranczak/esp/esp-idf/components/hal/platform_port/include -I/Users/robertfranczak/esp/esp-idf/components/esp_rom/include -I/Users/robertfranczak/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/robertfranczak/esp/esp-idf/components/esp_rom/esp32 -I/Users/robertfranczak/esp/esp-idf/components/esp_common/include -I/Users/robertfranczak/esp/esp-idf/components/esp_system/include -I/Users/robertfranczak/esp/esp-idf/components/esp_system/port/soc -I/Users/robertfranczak/esp/esp-idf/components/esp_system/port/include/private -I/Users/robertfranczak/esp/esp-idf/components/xtensa/include -I/Users/robertfranczak/esp/esp-idf/components/xtensa/esp32/include -I/Users/robertfranczak/esp/esp-idf/components/lwip/include -I/Users/robertfranczak/esp/esp-idf/components/lwip/include/apps -I/Users/robertfranczak/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/robertfranczak/esp/esp-idf/components/lwip/lwip/src/include -I/Users/robertfranczak/esp/esp-idf/components/lwip/port/esp32/include -I/Users/robertfranczak/esp/esp-idf/components/lwip/port/esp32/include/arch -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/robertfranczak/Code/ESP32/ESP=. -fmacro-prefix-map=/Users/robertfranczak/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -MD -MT esp-idf/utils/CMakeFiles/__idf_utils.dir/Thread.cpp.obj -MF esp-idf/utils/CMakeFiles/__idf_utils.dir/Thread.cpp.obj.d -o esp-idf/utils/CMakeFiles/__idf_utils.dir/Thread.cpp.obj -c /Users/robertfranczak/Code/ESP32/ESP/src/utils/Thread.cpp
/Users/robertfranczak/Code/ESP32/ESP/src/utils/Thread.cpp: In member function 'void Thread::startThread()':
/Users/robertfranczak/Code/ESP32/ESP/src/utils/Thread.cpp:14:44: error: invalid use of non-static member function 'void* Thread::myThreadFun(void*)'
   14 |     pthread_create(&thread_id,NULL,Thread::myThreadFun,NULL);
      |                                    ~~~~~~~~^~~~~~~~~~~
/Users/robertfranczak/Code/ESP32/ESP/src/utils/Thread.cpp:6:7: note: declared here
    6 | void* Thread::myThreadFun(void *vargp)
      |       ^~~~~~
ninja: build stopped: subcommand failed.
